aligned stopper a bit

--- a/src/components/stopper/stopper.scss
+++ b/src/components/stopper/stopper.scss
@@ -13,7 +13,7 @@ $circumference: 2 * 3.14 * $circle-radius; // "circumference" = "girth"
   align-items: center;
   margin: 0 auto;
 
-  height: 250px;
+  height: 260px;
   width: 250px;
 }
 
